--- a/css/styles.css
+++ b/css/styles.css
@@ -21,17 +21,8 @@ body {
   margin-bottom: 30px;
 }
 
-.col-1 {
-  grid-column: 1 / span 1;
-}
-
-.col-1 * {
-  margin-left: auto;
-}
-
-.col-2 {
-  grid-column: 2 / span 2;
-  margin-left: 20px;
+.col-1, .col-2 {
+  grid-column: 1 / span 3;
 }
 
 .flex {
@@ -44,11 +35,33 @@ body {
 }
 
 #portrait {
-  width: 80%;
-  border-radius: 50%;
+  width: 100%;
   filter: grayscale(100%);
+  margin-bottom: 20px;
 }
 
 #personal-info {
   margin-top: 20px;
+}
+
+@media only screen and (min-width: 600px) {
+  .col-1 {
+    grid-column: 1 / span 1;
+  }
+
+  .col-1 * {
+    margin-left: auto;
+  }
+
+  .col-2 {
+    grid-column: 2 / span 2;
+    margin-left: 20px;
+  }
+
+  #portrait {
+    width: 80%;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    margin-bottom: 0px;
+  }
 }
