--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 * {
   margin: 0px;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 body {
-  background-color: gray;
+  background-color: rgb(201,201,201);
+}
+
+h2, h3 {
+  color: rgb(90,90,90);
 }
 
 .container-master {
@@ -44,7 +49,7 @@ body {
   margin-top: 20px;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 650px) {
   .col-1 {
     grid-column: 1 / span 1;
   }
