--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@ h2, h3 {
   color: rgb(90,90,90);
 }
 
+h2, h3, p {
+  word-wrap: break-word;
+}
 .container-master {
   max-width: 794px; /*A4 96PPI 794x1123*/
   margin-left: auto;
@@ -20,13 +23,36 @@ h2, h3 {
   padding: 20px;
 }
 
-.grid {
+.grid1 {
   display: grid;
   grid-template-columns: 33.33% 33.33% 33.33%;
   margin-bottom: 30px;
 }
 
-.col-1, .col-2 {
+.col-1-1, .col-1-2 {
+  grid-column: 1 / span 3;
+}
+
+.col-1-1 {
+  margin-bottom: 5px;
+}
+
+.grid2 {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  margin-bottom: 10px;
+}
+
+.col-2-1, .col-2-2 {
+  grid-column: 1 / span 4;
+}
+
+.grid3 {
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+}
+
+.col-3-1, .col-3-2, .col-3-3 {
   grid-column: 1 / span 3;
 }
 
@@ -50,15 +76,15 @@ h2, h3 {
 }
 
 @media only screen and (min-width: 650px) {
-  .col-1 {
+  .col-1-1 {
     grid-column: 1 / span 1;
   }
 
-  .col-1 * {
+  .col-1-1 * {
     margin-left: auto;
   }
 
-  .col-2 {
+  .col-1-2 {
     grid-column: 2 / span 2;
     margin-left: 20px;
   }
@@ -68,5 +94,51 @@ h2, h3 {
     border-radius: 50%;
     filter: grayscale(100%);
     margin-bottom: 0px;
+  }
+
+  .col-2-1 {
+    grid-column: 1 / span 1;
+  }
+
+  .col-2-2 {
+    grid-column: 2 / span 3;
+  }
+
+  .col-3-1 {
+    grid-column: 1 / span 1;
+  }
+
+  .col-3-2 {
+    grid-column: 2 / span 1;
+  }
+
+  .col-3-3 {
+    grid-column: 3 / span 1;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  .grid2 {
+    margin-bottom: 0px;
+  }
+
+  .col-2-1 {
+    grid-column: 1 / span 1;
+  }
+
+  .col-2-2 {
+    grid-column: 2 / span 3;
+  }
+
+  .col-3-1 {
+    grid-column: 1 / span 1;
+  }
+
+  .col-3-2 {
+    grid-column: 2 / span 1;
+  }
+
+  .col-3-3 {
+    grid-column: 3 / span 1;
   }
 }
