--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,19 @@
   font-family: "Poppins", sans-serif;
 }
 
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: gray;
+}
+
 .container-master {
   max-width: 840px; /*A4 96PPI 794x1123*/
   margin-left: auto;
@@ -81,21 +94,24 @@
   font-weight: 600
 }
 
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px 16px;
+  background-color: black;
+  position: sticky;
+  top: 0;
+}
+
+a.nav {
+  color: white
+}
+
 ul {
-  /* margin-left: 20px; */
   padding-left: 16px;
-}
-
-a:link {
-  text-decoration: none;
-}
-
-a:visited {
-  color: black;
-}
-
-a:hover {
-  color: gray;
 }
 
 @media only screen and (min-width: 750px) {
